@@ -21,6 +21,9 @@ Core and Builtins
   used in types.coroutine to be instance of collections.abc.Generator.
 
 
+- Issue #24450: Add gi_yieldfrom to generators and cr_await to coroutines.
+  Contributed by Benno Leslie and Yury Selivanov.
+
 Library
 -------
 
